--- a/NBH/NBH-war/web/timeExchange.xhtml
+++ b/NBH/NBH-war/web/timeExchange.xhtml
@@ -89,7 +89,7 @@
                             <div class="row">
                                 <ui:repeat value="#{exchangeListingManagedBean.activeListings}" var="listing">
                                     <div class="col-lg-4 col-md-12 col-sm-12">
-                                        <div class="blog__item" style="border: 2px solid gainsboro; padding:2em">
+                                        <div class="blog__item" style="border: 2px solid gainsboro; padding:2em; height: 300px">
                                             <div class="blog__item__text text-center">
                                                 <h5><a href="#">#{listing.title}</a></h5>
                                                 Date: 
