--- a/NBH/NBH-war/web/myExchangeListing.xhtml
+++ b/NBH/NBH-war/web/myExchangeListing.xhtml
@@ -48,7 +48,8 @@
                                 <div class="row">
                                     <ui:repeat value="#{exchangeListingManagedBean.allListings}" var="listing">
                                         <div class="col-lg-4 col-md-12 col-sm-12">
-                                            <div class="blog__item" style="border: 2px solid gainsboro; padding:2em">
+                                            <div class="blog__item" 
+                                                 style="border: 2px solid gainsboro; padding:2em; height: 400px">
                                                 <div class="blog__item__text text-center">
                                                     <h5><a href="#">#{listing.title}</a></h5>
                                                     <h:outputText style="color: #7fad39; font-weight: bold; font-size: 18px" 
@@ -85,7 +86,7 @@
                                                     </div>
                                                     <div style="padding:1em">
                                                         <h:commandButton value="Delete" class="blog__btn"
-                                                                     style="border-color: #ff353c; background-color: #ffffff; color: #ff353c"
+                                                                     style="border-color: #ff353c; background-color: #ffffff; color: #ff353c; padding: 17px"
                                                                      action="#{exchangeListingManagedBean.deleteListing(listing)}"
                                                                      onclick="return confirmDelete();" type="submit" />
                                                     </div>
