--- a/NBH/NBH-war/web/viewExchangeListing.xhtml
+++ b/NBH/NBH-war/web/viewExchangeListing.xhtml
@@ -28,63 +28,65 @@
                 </div>
             </div>
         </section>
-        <h:form id="form" class="content-class">
-            <p:growl id="growl" showDetail="true" sticky="true" />
-            <div class="event-details text-center" style="padding:2em"> 
-                <div class="detail-row">
-                    <span class="detail-value" style="font-size: 25px">
-                        <span class="detail-label"><b>Date:</b></span>
-                        <h:outputText value="#{exchangeListingManagedBean.currentExchangeListing.startDateTime}" >
-                            <f:convertDateTime pattern="EEEE, MMMM d, yyyy" timeZone="Asia/Singapore" />
-                        </h:outputText>
-                    </span>
+        <div style="margin:0 auto; padding: 0; box-sizing: border-box; display: flex; justify-content: center;">
+            <h:form id="form" class="content-class">
+                <p:growl id="growl" showDetail="true" sticky="true" />
+                <div class="event-details" style="padding:2em"> 
+                    <div class="detail-row">
+                        <span class="detail-value" style="font-size: 25px">
+                            <span class="detail-label"><b>Date:&nbsp;</b></span>
+                            <h:outputText value="#{exchangeListingManagedBean.currentExchangeListing.startDateTime}" >
+                                <f:convertDateTime pattern="EEEE, MMMM d, yyyy" timeZone="Asia/Singapore" />
+                            </h:outputText>
+                        </span>
+                    </div>
+
+
+                    <div class="detail-row">
+                        <span class="detail-value" style="font-size: 25px" >
+                            <span class="detail-label"><b>Time:&nbsp;</b></span>
+                            <h:outputText style="font-size: 25px" value="#{exchangeListingManagedBean.currentExchangeListing.startDateTime}" >
+                                <f:convertDateTime pattern="HH:mm" timeZone="Asia/Singapore" />
+                            </h:outputText>
+                            -
+                            <h:outputText value="#{exchangeListingManagedBean.currentExchangeListing.endDateTime}" >
+                                <f:convertDateTime pattern="HH:mm" timeZone="Asia/Singapore" />
+                            </h:outputText>
+                        </span>
+                    </div>
+
+                    <div class="detail-row" style="font-size: 25px" >
+                        <span class="detail-label"><b>Description:</b></span><br/>
+                        <span class="detail-value">#{exchangeListingManagedBean.currentExchangeListing.description}</span>
+                    </div>
+
+                    <div class="detail-row" style="font-size: 25px" >
+                        <span class="detail-label"><b>Skills required for task:</b></span>
+                        <span class="detail-value">
+                            <ul>
+                                <ui:repeat value="#{exchangeListingManagedBean.currentExchangeListing.skills}" var="skill">
+                                    #{skill.skillName}<br/>
+                                </ui:repeat>
+                            </ul>
+                        </span>
+                    </div>
                 </div>
 
+                <div class="event-register text-center">           
+                    <!--
+                    <p:commandButton value="Offer" action="addOffer.xhtml?faces-redirect=true">
+                        <f:param name="exchangeListingId" value={offerManagedBean.exchangeListingId}" />
+                    </p:commandButton>
+                    -->
+                    <h:commandButton value="Add Offer" 
+                                     action="#{exchangeListingManagedBean.navigateToAddOffer(exchangeListingManagedBean.currentExchangeListing)}" 
+                                     class="site-btn"
+                                     style="background-color: "/>
 
-                <div class="detail-row">
-                    <span class="detail-value" style="font-size: 25px" >
-                        <span class="detail-label"><b>Time:</b></span>
-                        <h:outputText style="font-size: 25px" value="#{exchangeListingManagedBean.currentExchangeListing.startDateTime}" >
-                            <f:convertDateTime pattern="HH:mm" timeZone="Asia/Singapore" />
-                        </h:outputText>
-                        -
-                        <h:outputText value="#{exchangeListingManagedBean.currentExchangeListing.endDateTime}" >
-                            <f:convertDateTime pattern="HH:mm" timeZone="Asia/Singapore" />
-                        </h:outputText>
-                    </span>
                 </div>
 
-                <div class="detail-row" style="font-size: 25px" >
-                    <span class="detail-label"><b>Description:</b></span><br/>
-                    <span class="detail-value">#{exchangeListingManagedBean.currentExchangeListing.description}</span>
-                </div>
-
-                <div class="detail-row" style="font-size: 25px" >
-                    <span class="detail-label"><b>Skills required for task:</b></span>
-                    <span class="detail-value">
-                        <ul>
-                            <ui:repeat value="#{exchangeListingManagedBean.currentExchangeListing.skills}" var="skill">
-                                #{skill.skillName}<br/>
-                            </ui:repeat>
-                        </ul>
-                    </span>
-                </div>
-            </div>
-
-            <div class="event-register text-center">           
-                <!--
-                <p:commandButton value="Offer" action="addOffer.xhtml?faces-redirect=true">
-                    <f:param name="exchangeListingId" value={offerManagedBean.exchangeListingId}" />
-                </p:commandButton>
-                -->
-                <h:commandButton value="Add Offer" 
-                                 action="#{exchangeListingManagedBean.navigateToAddOffer(exchangeListingManagedBean.currentExchangeListing)}" 
-                                 class="site-btn"
-                                 style="background-color: "/>
-
-            </div>
-
-        </h:form>
+            </h:form>
+        </div>
     </ui:define>
 
     <ui:define name="script">
