--- a/NBH/NBH-war/web/addHiddenGemReview.xhtml
+++ b/NBH/NBH-war/web/addHiddenGemReview.xhtml
@@ -50,8 +50,9 @@
                                 </p>
                             </div>
                             <div class="checkout__input" >
-                                <p>Review/Recommendation<span>*</span></p>
-                                <h:message for="review" style="color: red"/>
+                                <p>Review/Recommendation<span>*</span>
+                                    <h:message for="review" style="color: red"/>
+                                </p>
                                 <h:inputTextarea id="review" value="#{hiddenGemManagedBean.review}"
                                                  required="true" requiredMessage="required" rows="5" cols="50" />
                             </div>
