--- a/NBH/NBH-war/web/s/createBusinessListing.xhtml
+++ b/NBH/NBH-war/web/s/createBusinessListing.xhtml
@@ -19,6 +19,11 @@
             <!-- Add any right content here -->
         </ui:define>
 
+        <ui:define name="title">
+            Create Business Listing
+        </ui:define>
+
+
         <ui:define name="content">
             <section class="blog-details spad" style="background-image: url('https://wallpapers.com/images/hd/pastel-aesthetic-background-kk9ygsa8qygoluem.jpg'); background-size: cover; background-position: center;">
                 <div class="container" >
@@ -79,8 +84,8 @@
                                 <div class="text-center">
                                     <h:commandButton value="Submit" action="#{businessManagedBean.addBusiness(evt)}" class="btn btn-primary" />
                                 </div>
-                                
-                                
+
+
                             </h:form>
                         </div>
                     </div>
