--- a/NBH/NBH-war/web/s/createBusinessServiceItem.xhtml
+++ b/NBH/NBH-war/web/s/createBusinessServiceItem.xhtml
@@ -19,6 +19,11 @@
                 script
             </ui:define>
 
+            <ui:define name="title">
+                Create Business Service Item
+            </ui:define>
+
+
         </ui:composition>
 
     </body>
