--- a/NBH/NBH-war/web/s/customerView_1.xhtml
+++ b/NBH/NBH-war/web/s/customerView_1.xhtml
@@ -5,6 +5,10 @@
                 template="./../layout/default2.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+    <ui:define name="title">
+        NBH
+    </ui:define>
+
     <ui:define name="content">
         <f:metadata>
             <f:event type="preRenderView" listener="#{customerManagedBean.loadSelectedCustomer}" />
@@ -47,7 +51,7 @@
                         <div class="blog__item">
                             <div class="blog__item__pic">
                                 <!-- <img src="https://static.vecteezy.com/system/resources/previews/026/994/796/non_2x/time-is-money-tiny-people-businessmen-exchange-time-for-money-business-concept-time-management-modern-flat-cartoon-style-illustration-on-white-background-vector.jpg" alt="" height="150px" width="200px"/> -->
-                                 <img src="" alt="" height="150px" width="200px"/> 
+                                <img src="" alt="" height="150px" width="200px"/>
 
                             </div>
                             <div class="blog__item__text">
