--- a/NBH/NBH-war/web/s/hiddenGems.xhtml
+++ b/NBH/NBH-war/web/s/hiddenGems.xhtml
@@ -8,6 +8,9 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
                 xmlns:jsf="http://xmlns.jcp.org/jsf">
+    <ui:define name="title">
+        Hidden Gems
+    </ui:define>
 
     <ui:define name="content" >
         <f:metadata>
@@ -178,5 +181,4 @@
             //]]>
         </script>
     </ui:define>
-
 </ui:composition>
