--- a/NBH/NBH-war/web/s/addCustomerPhoto.xhtml
+++ b/NBH/NBH-war/web/s/addCustomerPhoto.xhtml
@@ -5,6 +5,9 @@
                 template="./../layout/default2.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
+    <ui:define name="title">
+        Add Profile Photo
+    </ui:define>
 
     <ui:define name="content">
         <f:metadata>
@@ -21,8 +24,8 @@
 
                                 <br></br>
                                 <h:inputFile value="#{customerManagedBean.uploadedfile}" style="color: white;" />
-                                <h:commandButton action="#{customerManagedBean.upload(customerManagedBean.selectedCustomer.id)}" 
-                                                 value="Upload" 
+                                <h:commandButton action="#{customerManagedBean.upload(customerManagedBean.selectedCustomer.id)}"
+                                                 value="Upload"
                                                  />
                             </h:form>
                         </div>
@@ -42,7 +45,7 @@
                 </div>
             </div><!-- comment -->
         </section>
-       
+
     </ui:define>
 
 </ui:composition>
