--- a/NBH/NBH-war/web/s/addHiddenGem.xhtml
+++ b/NBH/NBH-war/web/s/addHiddenGem.xhtml
@@ -5,6 +5,9 @@
                 template="./../layout/default2.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:h="http://xmlns.jcp.org/jsf/html">
+    <ui:define name="title">
+        Add Hidden Gem
+    </ui:define>
 
     <ui:define name="content">
         <f:metadata>
