--- a/NBH/NBH-war/web/s/addHiddenGemReview.xhtml
+++ b/NBH/NBH-war/web/s/addHiddenGemReview.xhtml
@@ -5,6 +5,9 @@
                 template="./../layout/default2.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:h="http://xmlns.jcp.org/jsf/html">
+    <ui:define name="title">
+        Add Hidden Gem Review
+    </ui:define>
 
     <ui:define name="content">
         <f:metadata>
@@ -58,8 +61,8 @@
                             </div>
                             <h:commandButton styleClass="site-btn" action="#{hiddenGemManagedBean.addReview(customerManagedBean.selectedCustomer)}"
                                              value="Add"
-                                             style="justify-content: center; display: flex; background-image: url('https://wallpapers.com/images/hd/pastel-aesthetic-background-kk9ygsa8qygoluem.jpg')"
-                                             />
+                                             style="justify-content: center; display: flex; background-image: url('https://wallpapers.com/images/hd/pastel-aesthetic-background-kk9ygsa8qygoluem.jpg')">
+                            </h:commandButton>
                         </div>
 
                     </h:form>
