--- a/NBH/NBH-war/web/s/editProfile.xhtml
+++ b/NBH/NBH-war/web/s/editProfile.xhtml
@@ -5,6 +5,9 @@
                 template="./../layout/default2.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:h="http://xmlns.jcp.org/jsf/html">
+    <ui:define name="title">
+        Edit Profile
+    </ui:define>
 
     <ui:define name="content">
         <f:metadata>
@@ -13,7 +16,7 @@
         <section class="checkout spad"  style="background-image: url('https://wallpapers.com/images/hd/pastel-aesthetic-background-kk9ygsa8qygoluem.jpg'); background-size: cover; background-position: center;">
             <div class="container">
                 <h:form>
-                     <h:messages globalOnly="true" style="width: 300px; padding: 10px; background-color: #f8d7da; color: #721c24; border-radius: 5px; border: 1px solid #f5c6cb; margin-bottom: 10px;" />
+                    <h:messages globalOnly="true" style="width: 300px; padding: 10px; background-color: #f8d7da; color: #721c24; border-radius: 5px; border: 1px solid #f5c6cb; margin-bottom: 10px;" />
 
                     <div class="checkout__form">
                         <h4>Edit your Profile</h4>
@@ -55,7 +58,7 @@
     </ui:define>
 
     <ui:define name="script">
-        
+
     </ui:define>
 
 </ui:composition>
