--- a/NBH/NBH-war/web/s/myExchangeListing.xhtml
+++ b/NBH/NBH-war/web/s/myExchangeListing.xhtml
@@ -6,6 +6,9 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
+    <ui:define name="title">
+        My Exchange Listing
+    </ui:define>
 
 
     <ui:define name="content">
@@ -21,7 +24,7 @@
                 font-size: 12px;
             }
         </style>
-        
+
         <section class="breadcrumb-section set-bg" data-setbg="https://wallpapers.com/images/hd/pastel-aesthetic-background-kk9ygsa8qygoluem.jpg">
             <div class="container">
                 <div class="row">
@@ -48,14 +51,14 @@
                                 <div class="row">
                                     <ui:repeat value="#{exchangeListingManagedBean.allListings}" var="listing">
                                         <div class="col-lg-4 col-md-12 col-sm-12">
-                                            <div class="blog__item" 
+                                            <div class="blog__item"
                                                  style="border: 2px solid gainsboro; padding:2em; height: 400px">
                                                 <div class="blog__item__text text-center">
                                                     <h5><a href="#">#{listing.title}</a></h5>
-                                                    <h:outputText style="color: #7fad39; font-weight: bold; font-size: 18px" 
+                                                    <h:outputText style="color: #7fad39; font-weight: bold; font-size: 18px"
                                                                   value="Status: #{listing.status}"
                                                                   rendered="#{listing.status == 'ACTIVE'}"/>
-                                                    <h:outputText style="color: #ff353c; font-weight: bold; font-size: 18px" 
+                                                    <h:outputText style="color: #ff353c; font-weight: bold; font-size: 18px"
                                                                   value="Status: #{listing.status}"
                                                                   rendered="#{listing.status == 'TAKEN'}"/><br/>
                                                     Date:
@@ -70,11 +73,11 @@
                                                     <h:outputText value="#{listing.endDateTime}" >
                                                         <f:convertDateTime pattern="HH:mm" timeZone="Asia/Singapore" />
                                                     </h:outputText><br/><br/>
-                                                    <p:commandButton value="Edit" class="blog__btn" icon="pi pi-angle-double-right" 
-                                                                     style="border-color: #cccccc; background-color: #ffffff; font-weight: bold" 
-                                                                     action="#{exchangeListingManagedBean.navigateToEditExchangeListing(listing)}" 
+                                                    <p:commandButton value="Edit" class="blog__btn" icon="pi pi-angle-double-right"
+                                                                     style="border-color: #cccccc; background-color: #ffffff; font-weight: bold"
+                                                                     action="#{exchangeListingManagedBean.navigateToEditExchangeListing(listing)}"
                                                                      update="@form:growl">
-                                                        <!-- <p:commandLink update=":form:eventDetail" oncomplete="PF('eventDialog').show()" title="View Detail"> -->                           
+                                                        <!-- <p:commandLink update=":form:eventDetail" oncomplete="PF('eventDialog').show()" title="View Detail"> -->
                                                         <f:setPropertyActionListener value="#{listing}" target="#{exchangeListingManagedBean.currentExchangeListing}" />
                                                     </p:commandButton>
                                                     &nbsp;
@@ -86,9 +89,9 @@
                                                     </div>
                                                     <div style="padding:1em">
                                                         <h:commandButton value="Delete" class="blog__btn"
-                                                                     style="border-color: #ff353c; background-color: #ffffff; color: #ff353c; padding: 17px"
-                                                                     action="#{exchangeListingManagedBean.deleteListing(listing)}"
-                                                                     onclick="return confirmDelete();" type="submit" />
+                                                                         style="border-color: #ff353c; background-color: #ffffff; color: #ff353c; padding: 17px"
+                                                                         action="#{exchangeListingManagedBean.deleteListing(listing)}"
+                                                                         onclick="return confirmDelete();" type="submit" />
                                                     </div>
                                                     <p:dialog header="Edit Not Allowed" widgetVar="errorDialog" modal="true" showEffect="fade" hideEffect="fade">
                                                         <h:outputText value="Editing is not allowed since there are offers made to this listing." />
@@ -96,7 +99,7 @@
                                                     </p:dialog>
                                                 </div>
                                             </div>
-                                        </div>    
+                                        </div>
                                     </ui:repeat>
 
                                     <div class="col-lg-12">
@@ -117,7 +120,7 @@
 
             <ui:fragment rendered="#{empty exchangeListingManagedBean.allListings}">
                 <div class='text-center' style="padding:2em">
-                    <h3>You have not created any service exchange requests.</h3>            
+                    <h3>You have not created any service exchange requests.</h3>
                 </div>
             </ui:fragment>
         </h:form>
