--- a/NBH/NBH-war/web/s/myForumPost.xhtml
+++ b/NBH/NBH-war/web/s/myForumPost.xhtml
@@ -5,6 +5,9 @@
                 template="./../layout/default2.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
+    <ui:define name="title">
+        My Forum Post
+    </ui:define>
 
     <ui:define name="content">
         <f:metadata>
@@ -32,14 +35,14 @@
                                             <tr>
                                                 <td class="shoping__cart__item">
                                                     <img src="#{request.contextPath}/upload/#{post.fileName}" alt="" style="width: 100px; height:100px;"/>
-                                                    
+
                                                     <b>#{post.title}</b>
                                                 </td>
                                                 <td class="shoping__cart__price">
                                                     #{post.category}
                                                 </td>
                                                 <td class="shoping__cart__total">
-                                                     <h:outputText value="#{post.dateCreated}">
+                                                    <h:outputText value="#{post.dateCreated}">
                                                         <f:convertDateTime type="date" pattern="dd/MM/yyyy" timeZone="GMT+08:00"/>
                                                     </h:outputText>
                                                 </td>
