--- a/NBH/NBH-war/web/s/timeExchange.xhtml
+++ b/NBH/NBH-war/web/s/timeExchange.xhtml
@@ -6,12 +6,15 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
+    <ui:define name="title">
+        Time Exchange
+    </ui:define>
 
     <ui:define name="head">
 
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <!-- 
+        <!--
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
         -->
@@ -52,11 +55,11 @@
                 <ui:repeat value="{exchangeListingManagedBean.allListings}" var="listing">
                     <div class="item">
                         <div class="listing-item">
-                            <div class="left-image">                      
+                            <div class="left-image">
                                <a href="#"><h:graphicImage value="{listing.imagePath}" alt="Listing Image"/></a>
                             </div>
-                            <div class="right-content align-self-center">                
-                               <h4>{listing.title}</h4>                    
+                            <div class="right-content align-self-center">
+                               <h4>{listing.title}</h4>
                             </div>
                         </div>
                     </div>
@@ -92,7 +95,7 @@
                                         <div class="blog__item" style="border: 2px solid gainsboro; padding:2em; height: 300px">
                                             <div class="blog__item__text text-center">
                                                 <h5><a href="#">#{listing.title}</a></h5>
-                                                Date: 
+                                                Date:
                                                 <h:outputText value="#{listing.startDateTime}" >
                                                     <f:convertDateTime pattern="EEEE, MMMM d yyyy" timeZone="Asia/Singapore" />
                                                 </h:outputText><br/>
@@ -105,16 +108,16 @@
                                                     <f:convertDateTime pattern="HH:mm" timeZone="Asia/Singapore" />
                                                 </h:outputText><br/><br/>
 
-                                                <p:commandLink class="blog__btn" style="border-color: #cccccc; background-color: #7fad39; color: #ffffff" 
-                                                               action="#{exchangeListingManagedBean.navigateToViewExchangeListing(listing)}" 
+                                                <p:commandLink class="blog__btn" style="border-color: #cccccc; background-color: #7fad39; color: #ffffff"
+                                                               action="#{exchangeListingManagedBean.navigateToViewExchangeListing(listing)}"
                                                                value="View Details">
-                                                    <!-- <p:commandLink update=":form:eventDetail" oncomplete="PF('eventDialog').show()" title="View Detail"> -->                           
-                                                    <i class="pi pi-angle-double-right"></i>            
+                                                    <!-- <p:commandLink update=":form:eventDetail" oncomplete="PF('eventDialog').show()" title="View Detail"> -->
+                                                    <i class="pi pi-angle-double-right"></i>
                                                     <f:setPropertyActionListener value="#{listing}" target="#{exchangeListingManagedBean.currentExchangeListing}" />
                                                 </p:commandLink>
                                             </div>
                                         </div>
-                                    </div>    
+                                    </div>
                                 </ui:repeat>
 
                                 <div class="col-lg-12">
@@ -135,7 +138,7 @@
 
         <ui:fragment rendered="#{empty exchangeListingManagedBean.activeListings}">
             <div class='text-center' style="padding:2em">
-                <h3>No service exchange requests yet</h3>            
+                <h3>No service exchange requests yet</h3>
             </div>
         </ui:fragment>
 
