--- a/NBH/NBH-war/web/s/viewExchangeListing.xhtml
+++ b/NBH/NBH-war/web/s/viewExchangeListing.xhtml
@@ -6,6 +6,9 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:p="http://primefaces.org/ui">
+    <ui:define name="title">
+        View Exchange Listing
+    </ui:define>
 
     <ui:define name="head">
 
@@ -66,7 +69,7 @@
         <div style="margin:0 auto; padding: 0; box-sizing: border-box; display: flex; justify-content: center;">
             <h:form id="form" class="content-class">
                 <p:growl id="growl" showDetail="true" sticky="true" />
-                <div class="event-details" style="padding:2em"> 
+                <div class="event-details" style="padding:2em">
                     <div class="detail-row">
                         <span class="detail-value" style="font-size: 25px">
                             <span class="detail-label"><b>Date:&nbsp;</b></span>
@@ -107,14 +110,14 @@
                     </div>
                 </div>
 
-                <div class="event-register text-center">           
+                <div class="event-register text-center">
                     <!--
                     <p:commandButton value="Offer" action="addOffer.xhtml?faces-redirect=true">
                         <f:param name="exchangeListingId" value={offerManagedBean.exchangeListingId}" />
                     </p:commandButton>
                     -->
-                    <h:commandButton value="Add Offer" 
-                                     action="#{exchangeListingManagedBean.navigateToAddOffer(exchangeListingManagedBean.currentExchangeListing)}" 
+                    <h:commandButton value="Add Offer"
+                                     action="#{exchangeListingManagedBean.navigateToAddOffer(exchangeListingManagedBean.currentExchangeListing)}"
                                      class="site-btn"
                                      style="background-color: "/>
 
