--- a/NBH/NBH-war/web/s/viewProfile.xhtml
+++ b/NBH/NBH-war/web/s/viewProfile.xhtml
@@ -4,6 +4,9 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="./../layout/default2.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
+    <ui:define name="title">
+        View Profile
+    </ui:define>
 
     <ui:define name="content">
         <f:metadata>
@@ -15,9 +18,9 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <div class="product__details__pic">
-                                <img
-                                     src="#{request.contextPath}/upload/#{customerManagedBean.selectedCustomer.fileName}" alt="No Pic" height="400px" width="500px"/>
-                           
+                            <img
+                                src="#{request.contextPath}/upload/#{customerManagedBean.selectedCustomer.fileName}" alt="No Pic" height="400px" width="500px"/>
+
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
@@ -29,7 +32,7 @@
                                 <li><b>Contact</b> <span>#{customerManagedBean.selectedCustomer.contact}</span></li>
                                 <li><b>Region</b> <span>#{customerManagedBean.selectedCustomer.region}</span></li>
                                 <li><b>District</b> <span>#{customerManagedBean.selectedCustomer.district}</span></li>
-                                
+
                             </ul>
                         </div>
                     </div>
