--- a/NBH/NBH-war/web/s/customerView_1.xhtml
+++ b/NBH/NBH-war/web/s/customerView_1.xhtml
@@ -47,7 +47,7 @@
                         <div class="blog__item">
                             <div class="blog__item__pic">
                                 <!-- <img src="https://static.vecteezy.com/system/resources/previews/026/994/796/non_2x/time-is-money-tiny-people-businessmen-exchange-time-for-money-business-concept-time-management-modern-flat-cartoon-style-illustration-on-white-background-vector.jpg" alt="" height="150px" width="200px"/> -->
-                                 <img src="" alt="" height="150px" width="200px"/> 
+                                 <img src="https://www.shutterstock.com/image-vector/neighborhood-concept-neighbors-communication-mutual-260nw-2293889061.jpg" alt="" height="150px" width="200px"/> 
 
                             </div>
                             <div class="blog__item__text">
