--- a/NBH/NBH-war/web/s/viewAllBusinessListing.xhtml
+++ b/NBH/NBH-war/web/s/viewAllBusinessListing.xhtml
@@ -34,6 +34,19 @@
                 padding: 6px 10px; /* Add padding to the view button */
             }
         </style>
+        
+        <section class="breadcrumb-section set-bg" data-setbg="https://wallpapers.com/images/hd/pastel-aesthetic-background-kk9ygsa8qygoluem.jpg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <div class="breadcrumb__text">
+                            <h2>Search For Business Service Provider</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <h:form id="form">
 
             <p:dataTable id="serviceProviderListingTable" var="serviceProviderListing" value="#{businessManagedBean.searchServiceProviderListing}"
