--- a/NBH/NBH-war/web/s/viewBusinessListing.xhtml
+++ b/NBH/NBH-war/web/s/viewBusinessListing.xhtml
@@ -16,7 +16,19 @@
     </f:metadata>
 
     <ui:define name="content">
+        
         <div class="container mt-4">
+            <section class="breadcrumb-section set-bg" data-setbg="https://wallpapers.com/images/hd/pastel-aesthetic-background-kk9ygsa8qygoluem.jpg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <div class="breadcrumb__text">
+                            <h2>View Business Listing Created</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>
             <h:form id="form">
                 <div class="table-responsive">
                     <table class="table">
@@ -57,7 +69,7 @@
                                         </p:commandButton>
 
 
-                                        <p:commandButton value="View Rating" action="#{businessManagedBean.retrieveRating}"
+                                        <p:commandButton value="View Rating" action="#{businessManagedBean.retrieveRating}" 
                                                          update="ratingDetails" oncomplete="PF('ratingDialog').show()" process ="@this">
                                             <f:param name="serviceProviderListingId" value="#{serviceProviderListing.id}" />
 
